# youtube-english-drf

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
api/: admin.py  models.py  views.py
api/domain/: video.py
api/fixtures/: videos.json
api/migrations/: 0001_initial.py
api/repositories/: video_repository.py
api/usecases/: video_usecase.py
config/: urls.py
config/settings/: base.py  development.py  production.py
